--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,18 @@
 .hidden {
   visibility: hidden;
 }
+.btn {
+  margin:auto;
+}
+button {
+  margin: 30px;
+  padding:2rem;
+  font-family: 'Lobster', cursive;
+  text-shadow: 5px 0 #232931;
+  font-size: 3rem;
+  color: #4ECCA3;
+  background-color: #232931;
+}
 span {
   font-size: 2rem;
   color: #4ECCA3;
